# plant-track

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  index.html  lambda.tf  shell.nix  todo.md  wl-copy
resources/: index.html  plants.db  script.sql
resources/css/: styles.css
src/: auth_memes.rs  components.rs  db_api.rs  main.rs  middleware.rs
