[package]
name = "plant-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.21"
#axum = "0.6"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
#sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite"] }
#tokio = { version = "1.0", features = ["full"] }
#tracing = "0.1"
leptos = { version = "0.4.10", features = ["csr", "nightly", "ssr"] }
trunk = "0.17"
