[package]
name = "plant-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.21"
axum = { version = "0.6", features = ["form", "macros"]}
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
leptos = { version = "0.4.10", features = ["ssr"] }
anyhow = "1"
dotenvy = "0.15.7"
time = { version = "0.3.28", features = ["serde", "parsing"]}
tower-http = { version = "0.4", features = ["fs"]}
tower = { version = "0.4", features = ["full"] }
